--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -61,23 +61,22 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "^0.3.15",
-    "@types/htmlparser2": "^3.10.0",
-    "@types/lodash.clone": "^4.5.6",
-    "@types/lodash.clonedeep": "^4.5.6",
+    "@qualweb/types": "^0.3.18",
+    "@types/domhandler": "^2.4.1",
     "@types/node": "^12.12.26",
     "chai": "^4.2.0",
     "css": "^2.2.4",
+    "htmlparser2": "^4.0.0",
     "mocha": "^7.0.1",
-    "puppeteer": "^2.1.0",
+    "puppeteer": "^2.1.1",
     "request": "^2.88.0",
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.42",
+    "@qualweb/util": "^0.2.44",
+    "css-select": "^2.1.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
-    "rematrix": "^0.4.1",
-    "stew-select": "0.0.5"
+    "rematrix": "^0.4.1"
   }
 }
