--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -22,6 +22,7 @@
     "test-bp13": "mocha test/best-practices/QW-BP13.spec.js",
     "test-bp14": "mocha test/best-practices/QW-BP14.spec.js",
     "test-bp15": "mocha test/best-practices/QW-BP15.spec.js",
+    "test-bp16": "mocha test/best-practices/QW-BP16.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
