--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -67,19 +67,19 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "^0.3.22",
+    "@qualweb/types": "^0.3.26",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^13.9.2",
+    "@types/node": "^13.11.0",
     "chai": "^4.2.0",
     "css": "^2.2.4",
     "htmlparser2": "^4.0.0",
     "mocha": "^7.0.1",
+    "node-fetch": "^2.6.0",
     "puppeteer": "^2.1.1",
-    "request": "^2.88.2",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.55",
+    "@qualweb/util": "^0.2.57",
     "css-select": "^2.1.0",
     "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
