--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,20 +1,29 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.1.17",
+  "version": "0.2.0",
   "description": "Implementation of the WCAG 2.1 techniques",
-  "main": "dist/wcag.js",
+  "main": "dist/wcag.bundle.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "tsc": "tsc",
-    "lint": "eslint src/**/*",
     "test": "mocha --require esm test/**/*",
     "compile:techniques": "node compile-techniques.js",
-    "prebuild": "npm run compile:techniques && rimraf prebuild && tsc --build",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "prebuild": "npm run compile:techniques && rimraf prebuild && npm run format && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
-    "pub": "npm run build && npm publish --access=public"
+    "prepare": "npm run build"
   },
+  "homepage": "https://github.com/qualweb/wcag-techniques#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qualweb/wcag-techniques.git"
+  },
+  "bugs": {
+    "url": "https://github.com/qualweb/wcag-techniques/issues"
   },
   "keywords": [
     "wcag",
@@ -27,29 +36,26 @@
   ],
   "author": "João Vicente",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/qualweb/wcag-techniques/issues"
-  },
-  "homepage": "https://github.com/qualweb/wcag-techniques#readme",
-  "dependencies": {
-    "@qualweb/util": "^0.3.66",
-    "lodash.clone": "^4.5.0",
-    "lodash.clonedeep": "^4.5.0"
-  },
   "devDependencies": {
-    "@qualweb/dom": "^0.1.34",
-    "@qualweb/qw-page": "^0.1.38",
-    "@qualweb/types": "^0.4.61",
-    "@types/lodash.clone": "^4.5.6",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.14.33",
-    "chai": "^4.3.3",
+    "@qualweb/dom": "^0.2.0",
+    "@qualweb/qw-page": "^0.2.2",
+    "@qualweb/types": "^0.5.5",
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
-    "mocha": "^8.3.1",
+    "mocha": "^8.3.2",
+    "prettier": "^2.2.1",
     "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3",
-    "webpack": "^5.24.4",
+    "webpack": "^5.28.0",
     "webpack-cli": "^4.4.0"
   }
 }
