--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Evaluates chosen modules",
   "main": "dist/index.js",
   "files": [
@@ -34,16 +34,16 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "^0.2.0",
-    "@qualweb/types": "^0.5.15",
+    "@qualweb/dom": "^0.2.1",
+    "@qualweb/types": "^0.5.18",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/puppeteer": "^5.4.3",
+    "@types/node": "^14.14.41",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "chai": "^4.3.4",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
     "mocha": "^8.3.2",
@@ -57,8 +57,8 @@
     "@qualweb/act-rules": "^0.5.4",
     "@qualweb/best-practices": "^0.5.2",
     "@qualweb/counter": "^0.2.0",
-    "@qualweb/qw-page": "^0.2.6",
-    "@qualweb/util": "^0.5.5",
+    "@qualweb/qw-page": "^0.2.7",
+    "@qualweb/util": "^0.5.6",
     "@qualweb/wappalyzer": "^0.3.1",
     "@qualweb/wcag-techniques": "^0.2.3"
   }
