--- a/packages/evaluation/tsconfig.json
+++ b/packages/evaluation/tsconfig.json
@@ -32,7 +32,7 @@
     "typeRoots": [
       "@qualweb/types"
     ] /* List of folders to include type definitions from. */,
-    "types": ["@qualweb/types", "node", "puppeteer"] /* Type declaration files to be included in compilation. */,
+    "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   }
 }
