--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.5.5",
+  "version": "0.6.0-alpha",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -69,14 +69,15 @@
     "@qualweb/dom": "^0.2.1",
     "@qualweb/earl-reporter": "^0.4.1",
     "@qualweb/evaluation": "^0.2.3",
-    "puppeteer": "^8.0.0",
+    "colors": "^1.4.0",
+    "puppeteer": "^9.0.0",
     "puppeteer-cluster": "^0.22.0",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-adblocker": "^2.11.11",
     "puppeteer-extra-plugin-stealth": "^2.7.6"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.5.16",
+    "@qualweb/types": "^0.6.1-alpha",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^14.14.40",
     "@types/puppeteer": "^5.4.3",
