--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.5.6",
+  "version": "0.6.0-alpha",
   "description": "ACT rules module for qualweb web accessibility evaluator",
   "main": "dist/act.bundle.js",
   "files": [
@@ -36,12 +36,12 @@
   "devDependencies": {
     "@qualweb/dom": "^0.2.1",
     "@qualweb/qw-page": "^0.2.7",
-    "@qualweb/types": "^0.5.19",
+    "@qualweb/types": "^0.7.1-alpha",
     "@qualweb/util": "^0.5.8",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@types/node": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "chai": "^4.3.4",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
@@ -51,10 +51,10 @@
     "mocha": "^8.3.2",
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
-    "puppeteer": "^9.0.0",
+    "puppeteer": "^9.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.4",
-    "webpack": "^5.36.0",
+    "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0"
   }
 }
