--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.2.13",
+  "version": "0.2.14",
   "description": "Evaluates chosen modules",
   "main": "dist/index.js",
   "files": [
@@ -35,22 +35,22 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "^0.2.1",
-    "@qualweb/types": "^0.6.6",
+    "@qualweb/types": "0.6.8",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.6.1",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "chai": "^4.3.4",
-    "eslint": "^7.27.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-sonarjs": "^0.7.0",
     "esm": "^3.2.25",
     "mocha": "^8.4.0",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "puppeteer": "^9.1.1",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.20.36",
+    "typedoc": "^0.21.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
@@ -60,6 +60,6 @@
     "@qualweb/qw-page": "0.2.8",
     "@qualweb/util": "0.5.12",
     "@qualweb/wappalyzer": "0.3.1",
-    "@qualweb/wcag-techniques": "0.2.3"
+    "@qualweb/wcag-techniques": "^0.2.4"
   }
 }
