--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.6.10",
+  "version": "0.6.11",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -68,7 +68,7 @@
     "@qualweb/crawler": "0.3.6",
     "@qualweb/dom": "0.2.1",
     "@qualweb/earl-reporter": "0.4.1",
-    "@qualweb/evaluation": "0.2.13",
+    "@qualweb/evaluation": "0.2.14",
     "colors": "^1.4.0",
     "puppeteer": "^9.1.1",
     "puppeteer-cluster": "^0.22.0",
@@ -77,13 +77,13 @@
     "puppeteer-extra-plugin-stealth": "^2.7.8"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.6.7",
+    "@qualweb/types": "0.6.8",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "chai": "^4.3.4",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-sonarjs": "^0.7.0",
@@ -92,7 +92,7 @@
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.20.36",
+    "typedoc": "^0.21.0",
     "typescript": "^4.2.4"
   }
 }
