--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Processes necessary page data for qualweb accessibility evaluation.",
   "main": "dist/index.js",
   "files": [
@@ -36,23 +36,23 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "^0.5.16",
+    "@qualweb/types": "0.6.9",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^14.14.40",
+    "@types/node": "^15.12.5",
     "@types/node-fetch": "^2.5.10",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "chai": "^4.3.4",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-sonarjs": "^0.6.0",
     "esm": "^3.2.25",
-    "mocha": "^8.3.2",
-    "prettier": "^2.2.1",
+    "mocha": "^8.4.0",
+    "prettier": "^2.3.2",
     "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.20.35",
+    "typedoc": "^0.21.2",
     "typescript": "^4.2.4"
   },
   "dependencies": {
