--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-page",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "Utilities module for qualweb",
   "main": "dist/qw-page.bundle.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --require esm",
+    "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
@@ -33,27 +33,26 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "^0.2.1",
-    "@qualweb/types": "^0.6.5",
+    "@qualweb/dom": "^0.2.2",
+    "@qualweb/types": "^0.6.10",
     "@tsconfig/recommended": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "chai": "^4.3.4",
-    "eslint": "^7.26.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-sonarjs": "^0.7.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.4.0",
-    "prettier": "^2.3.0",
-    "puppeteer": "^9.1.1",
+    "eslint-plugin-sonarjs": "^0.9.1",
+    "mocha": "^9.0.2",
+    "prettier": "^2.3.2",
+    "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.20.36",
+    "typedoc": "^0.21.4",
     "typescript": "^4.2.4",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0"
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.2.3"
+    "@qualweb/qw-element": "^0.2.4"
   }
 }
