--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --require esm",
-    "test:ANameTest": "mocha --require esm test/ANameTest.spec.js",
+    "test:ANameTest": "mocha --require esm test/ANameTest.spec.mjs",
     "test:ANameTestWiki": "mocha --require esm test/ANameTestWiki.spec.js",
     "test:svg": "mocha --require esm test/ANameSVGTest.spec.js",
     "test:elementHidden": "mocha --require esm test/elementHidden.spec.js",
@@ -47,7 +47,7 @@
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
     "esm": "^3.2.25",
-    "mocha": "^8.4.0",
+    "mocha": "^9.1.3",
     "prettier": "^3.1.0",
     "puppeteer": "^21.5.2",
     "rimraf": "^5.0.5",
