--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -41,11 +41,15 @@
     "log-update": "4.0.0"
   },
   "devDependencies": {
+    "@koa/router": "^12.0.1",
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/koa": "^2.14.0",
+    "@types/koa__router": "^12.0.4",
     "@types/node": "^16.11.2",
     "chai": "^5.0.0",
     "eslint": "^8.56.0",
+    "koa": "^2.15.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "puppeteer": "^21.6.1",
