--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^15.6.1",
     "@types/string-pixel-width": "^1.10.3",
     "chai": "^5.0.0",
+    "css-select": "^5.1.0",
     "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
