--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -53,6 +53,7 @@
     "prettier": "^3.1.1",
     "puppeteer": "^21.6.1",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typescript": "^4.7.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.9.1"
