--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,6 +60,7 @@
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.25.6",
     "typescript": "^4.3.5"
   }
