--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -49,6 +49,7 @@
     "prettier": "^3.1.1",
     "puppeteer": "^21.6.1",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typescript": "^4.1.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.6.0"
