--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -57,6 +57,7 @@
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typescript": "^4.4.4"
   }
 }
