--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -46,6 +46,7 @@
     "prettier": "^3.1.1",
     "puppeteer": "^21.6.1",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.25.6",
     "typescript": "^4.4.4"
   },
