--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -43,6 +43,7 @@
     "prettier": "^3.1.1",
     "puppeteer": "^21.6.1",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.25.6",
     "typescript": "^4.7.4",
     "webpack": "^5.89.0",
