--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -21,15 +21,14 @@
     "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
     "useUnknownInCatchVariables": false,
-    /* Additional Checks */
-    "noUnusedLocals": true /* Report errors on unused locals. */,
-    "noUnusedParameters": true /* Report errors on unused parameters. */,
-    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
-    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "typeRoots": ["@qualweb/types"] /* List of folders to include type definitions from. */,
-    "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */
+
+    "types": [
+      "@qualweb/types",
+      "node",
+      "mocha",
+    ] /* Type declaration files to be included in compilation. */
   }
 }
