--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -13,7 +13,7 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf dist",
-    "build": "npm run format && npm run lint && tsc --build",
+    "build": "npm run format && npm run lint && tsc --build tsconfig.prod.json",
     "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/qualweb/dom#readme",
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.11.7",
     "chai": "^4.4.1",
