--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
-    "prebuild": "rimraf prebuild  && tsc --build",
+    "prebuild": "rimraf prebuild  && tsc --build tsconfig.prod.json",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "docs": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
