--- a/packages/qw-page/tsconfig.json
+++ b/packages/qw-page/tsconfig.json
@@ -4,7 +4,7 @@
     /* Basic Options */
     "resolveJsonModule": true,
     "outDir": "./prebuild" /* Redirect output structure to the directory. */,
-    "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+    "rootDir": "." /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
     "removeComments": true /* Do not emit comments to output. */,
 
     /* Strict Type-Checking Options */
@@ -24,7 +24,15 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "typeRoots": ["@qualweb/types"] /* List of folders to include type definitions from. */,
-    "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */
-  }
+
+    "types": [
+      "@qualweb/types",
+      "node",
+      "mocha",
+    ] /* Type declaration files to be included in compilation. */
+  },
+  "include": [
+    "src/**/*.ts",
+    "test/**/*.ts",
+  ],
 }
