--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -45,6 +45,7 @@
     "@tsconfig/recommended": "^1.0.3",
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.11.11",
+    "@types/node-fetch": "^2.6.11",
     "ajv": "^6.12.6",
     "chai": "^4.4.1",
     "eslint": "^8.56.0",
