--- a/package.json
+++ b/package.json
@@ -30,7 +30,17 @@
   "homepage": "https://github.com/qualweb/qualweb#readme",
   "workspaces": [
     "packages/qw-element",
-    "packages/*"
+    "packages/qw-page",
+    "packages/util",
+    "packages/locale",
+    "packages/act-rules",
+    "packages/best-practices",
+    "packages/wcag-techniques",
+    "packages/counter",
+    "packages/earl-reporter",
+    "packages/crawler",
+    "packages/core",
+    "packages/cli"
   ],
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
