--- a/packages/cui-checks/package.json
+++ b/packages/cui-checks/package.json
@@ -47,13 +47,16 @@
     "@tsconfig/recommended": "^1.0.3",
     "@types/hyphen": "^1.6.7",
     "@types/intl": "^1.2.2",
+    "@types/langdetect": "^0.2.2",
     "@types/luxon": "^3.6.2",
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.18.126",
     "@types/node-fetch": "^2.6.11",
     "@types/sinon": "^17.0.3",
+    "@types/utf8": "^3.0.3",
     "chai": "^4.4.1",
     "mocha": "^10.2.0",
+    "npm": "^11.1.0",
     "nyc": "^17.1.0",
     "prettier": "^3.1.1",
     "puppeteer": "^22.12.1",
@@ -67,16 +70,12 @@
   },
   "dependencies": {
     "@microsoft/recognizers-text-number-with-unit": "^1.3.0",
-    "@types/langdetect": "^0.2.2",
-    "date-fns": "^4.1.0",
     "hyphen": "^1.10.6",
-    "install": "^0.13.0",
-    "level": "^9.0.0",
     "locale-currency": "^0.0.4",
     "luxon": "^3.6.1",
-    "npm": "^11.1.0",
     "syllable": "^5.0.1",
     "syllable-pt": "^1.0.4",
-    "tinyld": "^1.3.4"
+    "tinyld": "^1.3.4",
+    "utf8": "^3.0.0"
   }
 }
