--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,18 +14,23 @@ on:
       - main
       - develop
 
-permissions: write-all
+permissions:
+  contents: write
+  id-token: write # Required for npm Trusted Publishing with OIDC
 
 jobs:
   # Run unit tests by calling the workflow in all_unit_tests.yml
   all_unit_tests:
     name: Unit tests
     uses: ./.github/workflows/all_unit_tests.yml
-  
+
   release:
     name: Release
     runs-on: ubuntu-latest
     # needs: all_unit_tests # Release step will ONLY run if unit tests complete.
+    permissions:
+      contents: write
+      id-token: write # Required for npm Trusted Publishing with OIDC
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -42,7 +47,6 @@ jobs:
         if: github.ref_name == 'main'
         uses: changesets/action@v1
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           publish: npm run release
@@ -51,9 +55,7 @@ jobs:
       - name: Create snapshot release
         if: github.ref_name == 'develop'
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
           npx changeset version --snapshot develop
           npx changeset publish --tag develop --no-git-tag
